--- a/Src/RedeSocial.Services/RedeSocial.Services.csproj
+++ b/Src/RedeSocial.Services/RedeSocial.Services.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RedeSocial.CrossCutting\RedeSocial.CrossCutting.csproj" />
     <ProjectReference Include="..\RedeSocial.Domain\RedeSocial.Domain.csproj" />
     <ProjectReference Include="..\RedeSocial.Repository\RedeSocial.Repository.csproj" />
   </ItemGroup>
