--- a/Src/RedeSocialWeb/RedeSocial.Web.csproj
+++ b/Src/RedeSocialWeb/RedeSocial.Web.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>aspnet-RedeSocialWeb-F54ECD43-E55D-44AB-B6E6-6A5C9430EBA4</UserSecretsId>
+    <UserSecretsId>aspnet-RedeSocial.Web-F54ECD43-E55D-44AB-B6E6-6A5C9430EBA4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,10 +33,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RedeSocial.Services\RedeSocial.Services.csproj" />
+    <ProjectReference Include="..\RedeSocial.API\RedeSocial.API.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
