--- a/Src/RedeSocialWeb/RedeSocial.Web.csproj
+++ b/Src/RedeSocialWeb/RedeSocial.Web.csproj
@@ -34,11 +34,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RedeSocial.API\RedeSocial.API.csproj" />
+    <ProjectReference Include="..\RedeSocial.Services\RedeSocial.Services.csproj" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
