feat: account perfil

--- a/Src/RedeSocial.Web/appsettings.json
+++ b/Src/RedeSocial.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "RedeSocialConnection": "Server=(localdb)\\mssqllocaldb;Database=RedeSocial;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "RedeSocialConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=RedeSocial;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
   "Logging": {
     "LogLevel": {
